logs/pymysqlpool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMysqlPool'...
Listing './lib/python3.5/site-packages/PyMysqlPool/constant'...
Compiling './lib/python3.5/site-packages/PyMysqlPool/constant/constant.py'...
***   File "./lib/python3.5/site-packages/PyMysqlPool/constant/constant.py", line 23
    print  loggingerr
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyMysqlPool/db_util'...
Listing './lib/python3.5/site-packages/PyMysqlPool/db_util/db_config'...
Listing './lib/python3.5/site-packages/PyMysqlPool/db_util/python_rf'...
Listing './lib/python3.5/site-packages/PyMysqlPool/example'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector/django'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector/fabric'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector/flask'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector/locales'...
Listing './lib/python3.5/site-packages/PyMysqlPool/mysql/connector/locales/eng'...
Listing './lib/python3.5/site-packages/PyMysqlPool/util'...
Compiling './lib/python3.5/site-packages/PyMysqlPool/util/balancer.py'...
***   File "./lib/python3.5/site-packages/PyMysqlPool/util/balancer.py", line 37
    print "Hello %s!" % name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyMysqlPool/util/py_net_util.py'...
***   File "./lib/python3.5/site-packages/PyMysqlPool/util/py_net_util.py", line 8
    print  socket.gethostbyname(socket.gethostname())
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/PyMysqlPool-1.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
